--- a/css/index.scss
+++ b/css/index.scss
@@ -75,8 +75,20 @@ pre {
 }
 
 .header-pp {
-  display: block;
-  margin: 0 auto;
   border-radius: 50%;
   border: 10px solid white;
+}
+
+.centralise-elem {
+  display: block;
+  margin: 0 auto;
+}
+
+.centralise-text {
+  text-align: center;
+}
+
+.nav-logo {
+  width: 50px;
+  height: auto;
 }
