--- a/css/index.scss
+++ b/css/index.scss
@@ -92,3 +92,21 @@ pre {
   width: 50px;
   height: auto;
 }
+
+.jumbotron {
+  margin-bottom: 0;
+}
+
+#main-nav {
+  justify-content: center;
+}
+
+.navbar-brand {
+  margin-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+#main-nav > a {
+  margin: 0 20px 0 20px;
+}
